--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <main>
         <section id="about" class="container my-5">
             <h2 class="text-center">Tentang Kami</h2>
-            <p class="text-center">Kami menyediakan platform kursus online yang menghubungkan siswa dengan tutor profesional di berbagai bidang. Dengan sistem kami, Anda dapat menemukan tutor yang sesuai dengan kebutuhan belajar Anda dengan mudah.</p>
+            <p class="text-center">Kami menyediakan platform kursus online secara gratis yang menghubungkan siswa dengan tutor profesional di berbagai bidang. Dengan sistem kami, Anda dapat menemukan tutor yang sesuai dengan kebutuhan belajar Anda dengan mudah.</p>
         </section>
 
         <section id="tutors" class="container my-5">
